force-app/main/default/objects/PricebookEntry/fields/Billing_period__c.field-meta.xml
<CustomField>
    <fullName>Billing_period__c</fullName>
    <label>Billing Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One time</fullName>
                <default>true</default>
                <label>One time</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>