force-app/main/default/objects/PricebookEntry/fields/List_Price_Rental__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Rental__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>List Price Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>